# FractalDimLib

./: CMakeLists.txt
include/: FDL_algorithm_bcd.h  FDL_algorithm_curvature.h  FDL_boxcountdim.h  FDL_curvature.h  FDL_featurehistogram.h  FDL_featuremap.h  FDL_header.h  FDL_osuflow.h  FDL_streamline.h  FDL_util.h  libht.h
src/: FDL_algorithm_bcd.cpp  FDL_algorithm_curvature.cpp  FDL_boxcountdim.cpp  FDL_curvature.cpp  FDL_featurehistogram.cpp  FDL_featuremap.cpp  FDL_osuflow.cpp  FDL_streamline.cpp
